--- a/config/music_library.yml
+++ b/config/music_library.yml
@@ -1,5 +1,9 @@
 defaults: &defaults
   library_path: '/Users/vova/Music/Library'
+  import_sources:
+    - '/Users/vova/Music'
+    - '/Users/vova/Public'
+    - '/Users/vova/mnt'
 
 development:
   <<: *defaults
