--- a/config/music_library.yml
+++ b/config/music_library.yml
@@ -3,6 +3,7 @@ defaults: &defaults
   import_sources:
     - '/Users/vova/Downloads'
     - '/Volumes/MUSIC'
+    - '/Volumes/T32'
 
 development:
   <<: *defaults
