Modify notes api

--- a/config/music_library.yml
+++ b/config/music_library.yml
@@ -3,7 +3,7 @@ defaults: &defaults
   import_sources:
     - '/Users/vova/Downloads'
     - '/Volumes/MUSIC'
-    - '/Volumes/T32'
+    - '/Volumes/MUSIC2'
 
 development:
   <<: *defaults
